started projects page -need to ifx preview -need to fix wrapping for cards -need to adjust spacing -need to add details (hover, click)

--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ body{
     margin-top: 40px;  
 }
 
-/* Name text */
 .hero-name {
     font-family: "Julius Sans One", sans-serif;
     font-size: 42px;
@@ -71,6 +70,36 @@ body{
     font-family: "Julius Sans One", sans-serif;
     font-size: 14px;
     letter-spacing: 1px;
+    color: #1F2937;
+    text-decoration: none;
+}
+
+/* ------------------ Footer ------------------ */
+
+.footer {
+    background-color: #FAFAFA;     
+    padding: 32px 0;
+    margin-top: 30px;     
+    border-top: 1px solid #E5E7EB;        
+}
+
+.footer-inner {
+    width: 90%;
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;   
+    align-items: center;
+}
+
+.footer-item {
+    font-family: "Julius Sans One", sans-serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+    color: #1F2937;
+}
+
+.footer-link {
     color: #1F2937;
     text-decoration: none;
 }
@@ -119,4 +148,42 @@ body{
     font-size: 13px;
     letter-spacing: 1px;
     color: #1F2937;
+}
+
+/* ------------------Projects Page------------------ */
+.project-cards {
+    display: flex;
+    gap: 200px;                
+    justify-content: center;
+    margin-top: 200px; 
+    margin-bottom: 100px;
+
+}
+
+.project-card {
+    width: 360px;
+    height: 420px;
+    background-color: #D9D9D9; 
+    border-radius: 30px;
+    padding: 30px 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.project-image {
+    width: 100%;
+    height: 200px;
+    border-radius: 18px;
+    object-fit: cover;       
+    margin-bottom: 24px;
+}
+
+.project-text {
+    font-family: "Julius Sans One", sans-serif;
+    font-size: 12px;
+    letter-spacing: 1px;
+    color: #1F2937;
+    text-align: center;
 }
